--- a/whois-ng3/src/app/search-results/search-results.component.html
+++ b/whois-ng3/src/app/search-results/search-results.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group>
     <mat-tab *ngFor="let res of tables | keyvalue" [label]="res.key">
         <ng-template matTabLabel>
-            <span [matBadge]="res.value.length" matBadgeOverlap="false">{{ res.key }}</span>
+            <span [matBadge]="res.value.length" matBadgeOverlap="false" class="stretch-badge">{{ res.key }}</span>
         </ng-template>    
         <app-search-table [rows]="res.value" [type]="res.key"></app-search-table>
     </mat-tab>
